<resources>
    <string name="app_name">My Tracking App</string>
    <string name="myLocation_string">My Location</string>
    <string name="latitude_string">Latitude %1$s</string>
    <string name="longitude_string">Longitude %1$s</string>
    <string name="speed_string">Speed: %1$s</string>
    <string name="start_button">Start New Tracking</string>
    <string name="api_key">ea24a5db5d70a7fa2d93a248d0fd9029</string>
    <string name="your_tracks">Your Tracks</string>
    <string name="statistics">Statistics</string>
    <string name="my_tracking_app">My Tracking App</string>
    <string name="time_sek">00:00:00</string>
    <string name="distance">0km</string>
    <string name="start_a_new_track">Start A New Track</string>
    <string name="sort_by">Sort by:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_your_track">Start your track</string>
    <string name="your_location" />
    <string name="start_tracking" />
    <string name="longitude_text" />
    <string name="time_sec" />
    <string name="finish_tracking" />
    <string name="speed_0_0">Speed: 0.0</string>
    <string name="latitude_text" />
    <string name="next_press">Next</string>
    <string name="permission_text">My Tracks is a small application to keep track of your route while you go around. Application ask about permission for using location. Please, press to Next step button for continue.</string>
    <string name="start_with_tracking_app">Start with Tracking App</string>
    <string name="start_buttonText">Start</string>
    <string name="start_trackingButton">Start tracking</string>
    <string name="stop_trackingButton">Stop tracking</string>
    <string name="restart_Button">Restart</string>
    <string name="press_the_button_in_left_upper_corner">Press the Button in left upper corner.</string>
    <string name="press_on_my_location_button">Press on My Location Button</string>
    <string name="press_start_button_for_start_tracking">Press Start button for start tracking</string>
    <string name="press_button_for_stop_tracking">Press button for stop tracking</string>
    <string name="press_restart_button_for_pause_tracking">Press Restart button for pause tracking</string>
    <string name="distance_textView">Distance</string>
    <string name="_0_0km">%1$s km</string>
    <string name="timer_textView">Timer</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="save_button">Save</string>

    <string name="time_textV">Time</string>
    <string name="temperature">Temperature</string>
    <string name="minimal_temperature">Minimal temperature</string>
    <string name="updated_at">Updated_at</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="updated_at_text">Updated at</string>
    <string name="status">Status</string>
    <string name="_sky">Clear Sky</string>
    <string name="maximal_temperature">Maximal Temperature</string>
    <string name="max_temperature">Max temperature</string>
    <string name="wind">Wind</string>
    <string name="wind_text">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_text">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_text">Humidity</string>
    <string name="_c">18 C</string>
    <string name="min_temperature_text">Min temperature</string>
    <string name="date_of_track">Date of Track</string>
    <string name="date">Date</string>
    <string name="time_of_track">Time of Track</string>
    <string name="time">Time</string>
    <string name="track_distance">Track Distance</string>
    <string name="distance_text">Distance</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="avg_speed_text">AVG Speed</string>
    <string name="tracking">Tracking</string>
    <string name="start_new_tracking">Start New Tracking</string>
    <string name="weather">Weather</string>
    <string name="tracks">Tracks</string>
    <string name="weather_menu">Weather</string>
    <string name="something_is_wrong">Something is wrong</string>
</resources>