<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simpleTrack"
    android:background="@color/blue_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dateTV"
        android:contentDescription="@string/date_of_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timeTV"
        android:contentDescription="@string/time_of_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:text="@string/time"
        app:layout_constraintEnd_toStartOf="@+id/distanceTV"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distanceTV"
        android:contentDescription="@string/track_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textColor="@color/white"
        android:text="@string/distance_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/avgSpeedTV"
        app:layout_constraintEnd_toStartOf="@+id/avgSpeedTV" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/avgSpeedTV"
        android:contentDescription="@string/avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:text="@string/avg_speed_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>